--- a/assets/scss/modules/_card.scss
+++ b/assets/scss/modules/_card.scss
@@ -37,11 +37,30 @@
 	padding-top: 1rem;
 }
 
+.helper {
+	display: inline-block;
+    height: 50%;
+    vertical-align: middle;
+}
+
 .card__thumb {
+	position: relative;
 	max-width: 168px;
 	width: 90%;
 	margin: 8px 0;
 	padding: 0 8px;
+	height: 240px;
+	display: inline-block;
+
+	& > img {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		margin: auto;
+		max-height: 230px;
+	}
 }
 
 .card__subtitle {
@@ -76,7 +95,7 @@
 	.card--full {
 		min-height: 460px;
 		height: 100%;
-	} 
+	}
 }
 
 .card--full {
@@ -92,7 +111,7 @@
 
 .card--scientist {
 	@extend .card;
-	min-height: 245px;
+	height: 300px;
 }
 
 .card--video {
@@ -103,7 +122,7 @@
 	.card-container--scientist {
 		min-height: 305px;
 	}
-	
+
 	.card--scientist {
 		min-height: 285px;
 	}
@@ -113,7 +132,7 @@
 	.card-container--scientist {
 		min-height: 285px;
 	}
-	
+
 	.card--scientist {
 		min-height: 265px;
 	}
@@ -136,7 +155,7 @@
 	.card-container--scientist {
 		min-height: 235px;
 	}
-	
+
 	.card--scientist {
 		min-height: 215px;
 		.card__subtitle {
@@ -150,7 +169,7 @@
 	.card-container--scientist {
 		min-height: 285px;
 	}
-	
+
 	.card--scientist {
 		min-height: 265px;
 	}
